# ready-to-build-dj-app-in-progress-

./: README.md  manage.py
base-directory/: LICENSE.txt  MANIFEST.in  README.txt  setup.cfg
bcc_2/: asgi.py  settings.py  urls.py  wsgi.py
